<resources>
    <string name="app_name">Farmacia</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="nuevo">Nuevo</string>
    <string name="contra">Contraseña</string>
    <string name="telefono"> Número de teléfono</string>
    <string name="error_conexion"> Error de conexion</string>
    <string name="cantidad"> Cantidad</string>
    <string name="nombreUsuario"> Nombre de usuario</string>
    <string name="Administrador"> Usuario Administrador</string>
    <string name="NuevoProducto"> Nuevo Producto</string>
    <string name="Editar"> Editar</string>
    <string name="Clientes"> Clientes</string>
    <string name="NuevoCliente"> Nuevo Usuario</string>
    <string name="EditarCliente"> Editar Cliente</string>
    <string name="Departamento">Departamento</string>
    <string name="Salario">Salario</string>
    <string name="Cedula">Cédula</string>
    <string name="Faltan_Datos">Todos los campos son necesarios</string>
    <string name="Nuevo_Admin">Nuevo Administrador Agregado</string>
    <string name="Cedula_Repetidad">La cédula ya está registrada</string>
    <string name="Espere">Espere</string>
</resources>
