<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tec.farmaciaadmin.NuevoUsuario">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <EditText
            android:layout_marginTop="20dp"
            android:hint="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nuevoClienteNombre"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="10dp"
            android:hint="@string/nombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nuevoClienteUsername"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:id="@+id/nuevoClientePassw"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="10dp"
            android:hint="@string/telefono"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nuevoClienteTelefono"
            android:layout_gravity="center_horizontal" />

        <Switch
            android:layout_marginTop="20dp"
            android:text="@string/Administrador"
            android:layout_width="201dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/switchNuevoUsuario" />

        <EditText
            android:layout_marginTop="10dp"
            android:hint="@string/Cedula"
            android:inputType="number"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/nuevoAdmiCedula"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="10dp"
            android:hint="@string/Departamento"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/nuevoAdminDepartamento"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_marginTop="10dp"
            android:hint="@string/Salario"
            android:inputType="number"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nuevoAdminSalario"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>
