<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editar_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tec.farmaciaadmin.EditarCliente">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_marginTop="20dp"
            android:hint="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editarClienteNombre"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="20dp"
            android:hint="@string/nombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editarClienteUsername"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:id="@+id/editarClientePassw"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="20dp"
            android:hint="@string/telefono"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editarClienteTelefono"
            android:layout_gravity="center_horizontal" />
        <Switch
            android:layout_marginTop="60dp"
            android:text="@string/Administrador"
            android:layout_width="201dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/switchEditarUsuario" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/editarClienteBtnGuardar"
                android:layout_gravity="bottom" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:id="@+id/editarClienteBtnCancelar"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
